--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -13,3 +13,6 @@
   padding: 5px 10px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
+.button:hover {
+  background-color: rgb(202, 98, 98);
+}
