--- a/src/components/FormContact/FormContact.module.css
+++ b/src/components/FormContact/FormContact.module.css
@@ -24,3 +24,6 @@ input {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   font-size: 14px;
 }
+.button:hover {
+  background-color: rgb(81, 184, 124);
+}
