--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -6,13 +6,14 @@
 }
 .button {
   margin-left: 2rem;
-  background-color: brown;
+  background-color: rgb(202, 98, 98);
   cursor: pointer;
   border: none;
   border-radius: 5px;
   padding: 5px 10px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  color: white;
 }
 .button:hover {
-  background-color: rgb(202, 98, 98);
+  background-color: rgb(187, 59, 59);
 }
