--- a/src/components/FormContact/FormContact.module.css
+++ b/src/components/FormContact/FormContact.module.css
@@ -8,25 +8,34 @@
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-input {
+.input {
+  outline: none;
   margin-bottom: 1rem;
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid lightgray;
 }
-
+.input:hover {
+  border-color: black;
+}
 .label {
   font-weight: bold;
+  margin-bottom: 8px;
 }
 
 .button {
   margin-top: 2rem;
   padding: 1rem;
-  background-color: rgb(33, 187, 97);
+  background-color: #00acee;
   border: none;
   cursor: pointer;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: 700;
+  color: white;
 }
 
 .button:hover {
-  background-color: rgb(81, 184, 124);
+  background-color: blue;
 }
